--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
 	</dependencies>
+	  
 
 	<build>
 		<plugins>
